# vidar

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tests/: test_base_environment.py  test_dotenv.py
vidar/: __init__.py  __main__.py  cli.py  internal.py  lib.py
